--- a/src/main/resources/public/reparatur-uebersicht.html
+++ b/src/main/resources/public/reparatur-uebersicht.html
@@ -42,6 +42,8 @@
             :rest-url="grid.restUrl"
             :reload="grid.reload"
             :search-query="grid.searchQuery"
+            :sort="grid.sort"
+            :sortorder="grid.sortorder"
             @reloaded="grid.reload = false"
           ></grid>
         </div>
