--- a/src/main/resources/public/produkt.html
+++ b/src/main/resources/public/produkt.html
@@ -65,6 +65,7 @@
             :rest-url="grid.restUrl"
             :reload="grid.reload"
             :search-query="grid.searchQuery"
+            :sort="grid.sort"
             @reloaded="grid.reload = false;"
           ></grid>
         </div>
