--- a/src/main/resources/public/rechnung.html
+++ b/src/main/resources/public/rechnung.html
@@ -60,6 +60,7 @@
             :rest-url="grid.restUrl"
             :reload="grid.reload"
             :search-query="grid.searchQuery"
+            :sort="grid.sort"
             @reloaded="grid.reload = false"
           ></grid>
         </div>
