--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -114,6 +114,9 @@
       Das Standardabholdatum wird dabei auf das Datum in <strong>3</strong> Tagen und die Abholzeit auf <strong>16:30 Uhr</strong> gesetzt.
     </p>
     <p>Wird die Expressbearbeitung aktiviert und es ist vor <strong>13:30 Uhr</strong> wird das Abholdatum auf den aktuellen Tag um <strong>18:30 Uhr</strong> gesetzt. Ist es nach 13:30 Uhr, wird das Abholdatum auf den nächsten Tag <strong>13:30 Uhr</strong> gesetzt.</p>
+    <p>Ist das berechnete Abholdatum zu 5 oder mehr nicht erledigten anderen Reparaturaufträgen hinterlegt, wird dieses auf den nächsten Tag gesetzt, an dem weniger
+      Abholungen stattfinden sollen.
+    <p>
     <p>Fällt das Abholdatum auf einen ein Sonn- oder Feiertag, wird dieses auf den nächst verfügbaren Werktag gesetzt. Dabei werden die sächsischen gesetzlichen Feiertage berücksichtigt.</p>
     <h4 id="kundewhlen">Kunde wählen</h4>
     <p>Um den Kunden zu wählen muss neben dem Label <em>Kunde</em> das <em>Kunde-Icon</em> geklickt werden. Anschließend öffnet sich ein Dialog in dem der entsprechende Kunde gesucht werden kann.
