--- a/src/main/resources/public/reparatur-uebersicht.html
+++ b/src/main/resources/public/reparatur-uebersicht.html
@@ -22,12 +22,22 @@
       <div id="content">
         <div class="form m1" v-if="kundeId === null">
           <div class="m6m">
-            <label for="searchForm_plz">Nummer</label>
+            <label for="searchForm_nummer">Rep.-Nr</label>
             <input class="m6" id="searchForm_nummer" type="text" v-model="grid.searchQuery.nummer"></input>
+          </div>
+          <div class="m6m">
+            <label for="searchForm_kundennummer">Kd.-Nr</label>
+            <input class="m6" id="searchForm_kundennummer" type="text" v-model="grid.searchQuery.kundennummer"></input>
           </div>
           <div class="m2m">
             <label for="searchForm_nachname">Nachname</label>
             <input class="m2" id="searchForm_nachname" type="text" v-model="grid.searchQuery.nachname"></input>
+          </div>
+          <div class="m1">
+             <label class="container checkbox">Nur nicht erledigte Aufträge
+              <input id="searchForm_erledigt" type="checkbox" v-model="grid.searchQuery.erledigt" />
+              <span class="checkmark"></span>
+            </label>
           </div>
           <div class="m1">
             <button class="right" title="Suchen" v-on:click="grid.reload = true;">Suchen</button>
