--- a/src/main/resources/public/einstellungen.html
+++ b/src/main/resources/public/einstellungen.html
@@ -2,7 +2,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Einstellungen - Computer-Insel Tools by Sita Geßner</title>
-    <link rel="icon" href="/themes/icons/zahnrad.png">
+    <link rel="icon" href="/themes/icons/einstellungen.png">
     <link rel="stylesheet" href="/themes/css/button.css">
     <link rel="stylesheet" href="/themes/css/dialog.css">
     <link rel="stylesheet" href="/themes/css/loading.css">
