Kleiner optische Anpassungen und Feldlängen vergrößert

--- a/src/main/resources/public/gruppe.html
+++ b/src/main/resources/public/gruppe.html
@@ -74,6 +74,7 @@
   <script src="/scripts/delete.dialog.component.js"></script>
   <script src="/scripts/header.component.js"></script>
   <script src="/scripts/grid.component.js"></script>
+  <script src="/scripts/zeichenzaehler.component.js"></script>
   <script src="/scripts/inventar/inventar.header.component.js"></script>
   <script src="/scripts/inventar/gruppe.edit.dialog.component.js"></script>
   <script src="/scripts/inventar/gruppe.js"></script>
