--- a/src/main/resources/public/kassenbuch.html
+++ b/src/main/resources/public/kassenbuch.html
@@ -83,6 +83,7 @@
   <script src="/scripts/util.js"></script>
   <script src="/scripts/messages.dialog.component.js"></script>
   <script src="/scripts/header.component.js"></script>
+  <script src="/scripts/zeichenzaehler.component.js"></script>
   <script src="/scripts/kassenbuch/kassenbuch.posten.edit.dialog.component.js"></script>
   <script src="/scripts/kassenbuch/kassenbuch.header.component.js"></script>
   <script src="/scripts/kassenbuch/kassenbuch.js"></script>
