--- a/src/main/resources/public/rechnung-uebersicht.html
+++ b/src/main/resources/public/rechnung-uebersicht.html
@@ -42,7 +42,7 @@
             </div>
           </div>
           <div class="m1">
-            <label class="container checkbox">Nur nicht bezahlte Rechnungen
+            <label class="container checkbox">Nur nicht bezahlte Rechnungen anzeigen
               <input id="searchForm_bezahlt" type="checkbox" v-model="grid.searchQuery.bezahlt" />
               <span class="checkmark"></span>
             </label>
@@ -99,6 +99,7 @@
   <script src="/scripts/confirm.dialog.component.js"></script>
   <script src="/scripts/header.component.js"></script>
   <script src="/scripts/grid.component.js"></script>
+  <script src="/scripts/zeichenzaehler.component.js"></script>
   <script src="/scripts/delete.dialog.component.js"></script>
   <script src="/scripts/reparatur/reparatur.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.suchen.dialog.component.js"></script>
