--- a/src/main/resources/public/rechnung.html
+++ b/src/main/resources/public/rechnung.html
@@ -169,6 +169,7 @@
   <script src="/scripts/messages.dialog.component.js"></script>
   <script src="/scripts/header.component.js"></script>
   <script src="/scripts/grid.component.js"></script>
+  <script src="/scripts/zeichenzaehler.component.js"></script>
   <script src="/scripts/reparatur/reparatur.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.edit.dialog.component.js"></script>
