--- a/src/main/resources/public/filiale.html
+++ b/src/main/resources/public/filiale.html
@@ -46,6 +46,7 @@
   <script src="/scripts/messages.dialog.component.js"></script>
   <script src="/scripts/header.component.js"></script>
   <script src="/scripts/grid.component.js"></script>
+  <script src="/scripts/zeichenzaehler.component.js"></script>
   <script src="/scripts/einstellungen/filiale.edit.dialog.component.js"></script>
   <script src="/scripts/einstellungen/einstellungen.header.component.js"></script>
   <script src="/scripts/einstellungen/filiale.js"></script>
