--- a/src/main/resources/public/kategorie.html
+++ b/src/main/resources/public/kategorie.html
@@ -67,6 +67,7 @@
   <script src="/scripts/delete.dialog.component.js"></script>
   <script src="/scripts/header.component.js"></script>
   <script src="/scripts/grid.component.js"></script>
+  <script src="/scripts/zeichenzaehler.component.js"></script>
   <script src="/scripts/inventar/inventar.header.component.js"></script>
   <script src="/scripts/inventar/kategorie.edit.dialog.component.js"></script>
   <script src="/scripts/inventar/kategorie.js"></script>
