--- a/src/main/resources/public/mitarbeiter.html
+++ b/src/main/resources/public/mitarbeiter.html
@@ -73,6 +73,7 @@
   <script src="/scripts/confirm.dialog.component.js"></script>
   <script src="/scripts/header.component.js"></script>
   <script src="/scripts/grid.component.js"></script>
+  <script src="/scripts/zeichenzaehler.component.js"></script>
   <script src="/scripts/delete.dialog.component.js"></script>
   <script src="/scripts/einstellungen/mitarbeiter.edit.dialog.component.js"></script>
   <script src="/scripts/einstellungen/mitarbeiter.edit.rechte.dialog.component.js"></script>
