--- a/src/main/resources/public/produkt.html
+++ b/src/main/resources/public/produkt.html
@@ -94,6 +94,7 @@
   <script src="/scripts/delete.dialog.component.js"></script>
   <script src="/scripts/header.component.js"></script>
   <script src="/scripts/grid.component.js"></script>
+  <script src="/scripts/zeichenzaehler.component.js"></script>
   <script src="/scripts/inventar/inventar.header.component.js"></script>
   <script src="/scripts/inventar/produkt.edit.dialog.component.js"></script>
   <script src="/scripts/inventar/produkt.js"></script>
