--- a/src/main/resources/public/rechnung-drucken.html
+++ b/src/main/resources/public/rechnung-drucken.html
@@ -14,7 +14,7 @@
       <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="100%">
         <tr>
           <td width="200%" align="center" colspan="2">
-            <img border="0" src="/themes/icons/auftrag_logo.png" width="413" height="135">
+            <img border="0" src="/themes/icons/auftrag_logo.png" width="200" height="80">
           </td>
         </tr>
         <tr>
@@ -59,12 +59,11 @@
                 <font COLOR="#000000" FACE="Arial, sans-serif" SIZE="2" style="font-size: 9pt">
                 Verkauf von Neu- und Gebrauchtware. Hardware, Software, Zubeh&ouml;r, Reparatur,
                 Beratung, Service<br>
-                &nbsp;</font></span></font>
+                </font></span></font>
             </div>
           </td>
         </tr>
         <tr>
-          <td width="55%" align="center" style="border-left-style: none; border-left-width: medium; border-right-style: none; border-right-width: medium; border-top-style: solid; border-top-width: 1; border-bottom-style: none; border-bottom-width: medium">&nbsp;</td>
           <td width="145%" align="center" style="border-left-style: none; border-left-width: medium; border-right-style: none; border-right-width: medium; border-top-style: solid; border-top-width: 1; border-bottom-style: none; border-bottom-width: medium">&nbsp;</td>
         </tr>
         <tr>
@@ -77,7 +76,6 @@
                 {{entity.rechnung.kunde.plz}} {{entity.rechnung.kunde.ort}}
               </font>
             </p>
-            <p>&nbsp;</p>
             <p><b><font face="Arial" size="4">Rechnung <span v-if="entity.rechnung.reparatur"> zum Auftrag {{entity.rechnung.reparatur.filiale.kuerzel}}{{entity.rechnung.reparatur.nummer}}</span></font></b></p>
             <table border="0" width="685">
               <tr>
@@ -93,7 +91,6 @@
                 </td>
               </tr>
             </table>
-            <p>&nbsp;</p>
             <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="685" height="77">
               <tr>
                 <td width="75" align="center" style="border-bottom-style: solid; border-bottom-width: 1" height="19">
