BLZ/KTO/BIC von Rechnung entfernen, Logo größer, Nummer mit Bindestrich

--- a/src/main/resources/public/rechnung-drucken.html
+++ b/src/main/resources/public/rechnung-drucken.html
@@ -14,7 +14,7 @@
       <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="100%">
         <tr>
           <td width="200%" align="center" colspan="2">
-            <img border="0" src="/themes/icons/auftrag_logo.png" width="200" height="80">
+            <img border="0" src="/themes/icons/auftrag_logo.png" width="300" height="120">
           </td>
         </tr>
         <tr>
@@ -81,7 +81,7 @@
               <tr>
                 <td>
                   <font face="Arial" style="font-size: 9pt">
-                  Rechnungsnummer: {{entity.rechnung.filiale.kuerzel}}{{entity.rechnung.nummer}}
+                  Rechnungsnummer: {{entity.rechnung.filiale.kuerzel}}{{entity.rechnung.nummerAnzeige}}
                   </font>
                 </td>
                 <td>&nbsp;</td>
@@ -180,9 +180,8 @@
             </p>
             <font style="font-size: 9pt"><br>
             Firmensitz: Marktstraße 10, 04177 Leipzig<br>
-            Bankverbindung: Computer-Insel GbR . Commerzbank Leipzig . BLZ: 860 40 000
-            . KTO: </font><span LANG="de-DE"><font style="font-size: 9pt">
-            0521666800<br>IBAN: DE50 8604 0000 0521 6668 00 . BIC: COBADEFFXXX</font></span></font>
+            Bankverbindung: Computer-Insel GbR . Commerzbank Leipzig . IBAN: DE50 8604 0000 0521 6668 00
+            </font>
           </td>
         </tr>
       </table>
